fix: grep'ten kacan tekrarin giderilmesi, olu sorgu dali ve cift mekanizmanin temizligi (T-018-Eksik)